# Mech_Powerhouse

./: .gitignore  README.md  main.py  pyproject.toml
components/: shaft.py
core/: constants.py  units.py
mech_powerhouse.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
mech_powerhouse/core/: base.py  materials.py
